public enum BodyType {
    Hatchback,
    Sedan,
    SUV,
    Coupe,
    Convertible,
    Wagon,
    Van,
    Jeep,
    PickUp
}
