
public interface Refueling {
    void fuel();
}