public enum TypeFuel {
    Gas,
    Diesel
}
