public enum TypeGearbox {
    Manual,
    Automatic,
    Robotic
}
