
public interface Wiping {
    void wipWindshield();

    void wipHeadlights();

    void wipMirrors();
}
